--- a/taskCSS.css
+++ b/taskCSS.css
@@ -1,53 +1,39 @@
-body {
-  background-color: #f8f8f8;
-  font-family: Arial, sans-serif;
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
-
-h1 {
-  text-align: center;
-  color: #333;
+.container1 {
+  width: 200px;
+  height: 200px;
+  border-radius: 70%;
+  overflow: hidden;
+}
+.profile {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+img {
+  overflow-clip-margin: content-box;
+  overflow: clip;
+}
+div {
+  display: block;
 }
 
 h2 {
-  color: #333;
-}
-
-a {
-  color: #0099ff;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-p {
-  font-size: 16px;
-  line-height: 1.5em;
-  color: #666;
-}
-
-ul {
-  margin-left: 20px;
-}
-
-li {
-  font-size: 14px;
-  line-height: 1.5em;
-  color: #333;
-}
-
-iframe {
   display: block;
-  margin: 0 auto;
-  margin-top: 20px;
+  font-size: 1.5em;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
 }
-#chap1 {
-  background-color: #f0f0f0;
-  padding: 20px;
-}
-
-#chap2 {
-  background-color: #e0e0e0;
-  padding: 20px;
+a:-webkit-any-link {
+  color: -webkit-link;
+  cursor: pointer;
+  text-decoration: underline;
 }
